feat: create update organizer route
