# internal/api/organizer_decoder.go
@@ -6,6 +6,7 @@ import (
 	"net/http"
 
 	"github.com/Suhaan-Bhandary/fundraiser-management/internal/pkg/dto"
+	"github.com/Suhaan-Bhandary/fundraiser-management/internal/pkg/internal_errors"
 )
 
 func decodeRegisterOrganizerRequest(r *http.Request) (dto.RegisterOrganizerRequest, error) {
@@ -24,6 +25,22 @@ func decodeLoginOrganizerRequest(r *http.Request) (dto.LoginOrganizerRequest, er
 	if err != nil {
 		return dto.LoginOrganizerRequest{}, errors.New("Invalid Json in request body.")
 	}
+
+	return req, nil
+}
+
+func decodeUpdateOrganizerRequest(r *http.Request) (dto.UpdateOrganizerRequest, error) {
+	var req dto.UpdateOrganizerRequest
+	err := json.NewDecoder(r.Body).Decode(&req)
+	if err != nil {
+		return dto.UpdateOrganizerRequest{}, errors.New("Invalid Json in request body.")
+	}
+
+	tokenData, err := decodeTokenFromContext(r.Context())
+	if err != nil {
+		return dto.UpdateOrganizerRequest{}, internal_errors.InvalidCredentialError{Message: "Organizer not found"}
+	}
+	req.OrganizerId = uint(tokenData.ID)
 
 	return req, nil
 }
